--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@ body,
   font-size: $font-size;
   position: relative;
   background-color: $realblue;
-  background-image: url("images/img-background.png");
+  // background-image: url("images/img-background.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
