--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,28 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.card {
+  border-radius: 0;
+}
+/* 
+.default-input {
+  ::placeholder {
+    color: "#CECECE" !important;
+  }
+}
+
+#default-input {
+  ::placeholder {
+    color: "#CECECE" !important;
+  }
+} */
+
+#default-input::placeholder {
+  color: "#CECECE" !important;
 }
