--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 @layer base {
   * {
-    font-family: "Oswald", sans-serif !important;
+    font-family: "Oswald", sans-serif;
     color: #b2b0bb;
   }
 
